[gd_scene load_steps=6 format=2]

[ext_resource path="res://Modules/kenney_furniture/GLTF format/cardboardBoxOpen.glb" type="PackedScene" id=1]
[ext_resource path="res://TierTwoModules/pickup_items/ItemGenerator.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.566495, 0.529655, 0.560858 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ItemHolder:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.33554, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemHolder:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "display"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ItemHolder:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.33554, 0 ), Vector3( 0, 1.829, 0 ), Vector3( 0, 1.33554, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemHolder:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="ItemGenerator" type="Spatial"]
script = ExtResource( 3 )

[node name="StaticBody" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0563674, 0.0716271, -0.0394573 )
shape = SubResource( 1 )

[node name="cardboardBoxOpen" parent="." instance=ExtResource( 1 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -0.5, -0.5, 0.5 )

[node name="ItemHolder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33554, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "display"
anims/RESET = SubResource( 2 )
anims/display = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
